--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Text-Utility</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body style="background-color: #212121; color: #e0dfdf;">
+    <div id="root">
+      <!-- & all the things are render here -->
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
